Fix recurring error messages in input validation with some JS refactoring

--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -27,7 +27,8 @@
         <div class="error-div"></div>
         <form id="signup-form">
             <div class="form-group">
-                <input type="text" class="form-control" placeholder="Enter your name" id="name">
+                <input type="text" class="form-control" placeholder="Enter your name" id="name" autocomplete="off"
+                    required>
             </div>
             <button type="submit" class="btn btn-primary btn-lg" id="submit-button">Enter</button>
         </form>
