--- a/templates/home.html
+++ b/templates/home.html
@@ -71,7 +71,7 @@
 
                                     <div class=" form-group mt-4">
                                         <input type="text" class="form-control" id="room-name"
-                                            placeholder="e.g. #marketing" autocomplete="off">
+                                            placeholder="e.g. #marketing" autocomplete="off" required>
                                     </div>
                                 </div>
                                 <div class="modal-footer">
@@ -206,20 +206,19 @@
         {%- endraw %}
     </script>
     <script src="{{ url_for('static', filename='js/index.js') }}"></script>
-    <!-- <script>
+    <script>
         // Clear error message and unsuccessful room name
         // every time new room form appears
         $(document).ready(function () {
             $('#create-room-form').on('show.bs.modal', function (event) {
-                document.querySelector('.error-message').style.display = 'none';
+                const errorMsg = document.querySelector('.error')
+                if (errorMsg) {
+                    errorMsg.parentNode.removeChild(errorMsg)
+                }
                 document.querySelector('#room-name').value = '';
             });
-
-            $('#create-room-form').on('shown.bs.modal', function () {
-                $('#room-name').trigger('focus');
-            });
         });
-    </script> -->
+    </script>
 </body>
 
 </html>
