--- a/static/css/style.css
+++ b/static/css/style.css
@@ -111,13 +111,13 @@ p {
   color: red;
   margin: 0px 0px 10px 0;
   -webkit-animation-name: hide;
-          animation-name: hide;
+  animation-name: hide;
   -webkit-animation-duration: 0.5s;
-          animation-duration: 0.5s;
+  animation-duration: 0.5s;
   -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
   -webkit-animation-play-state: paused;
-          animation-play-state: paused;
+  animation-play-state: paused;
 }
 
 #left-side {
@@ -136,13 +136,20 @@ p {
   margin-right: 5px;
 }
 
-#left-side #user-info {
-  padding: 20px;
+/* #left-side #user-info {
+  
 }
 
 #left-side #user-info i {
   float: left;
   margin: 6px 10px 0 0;
+} */
+
+#user-info {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 20px;
 }
 
 #left-side #channels-header {
@@ -228,7 +235,7 @@ p {
 
 #right-side #message-area {
   width: 100%;
-  height: calc( 100vh - ( 44px + 28px + 100px + 54px + 60px ));
+  height: calc(100vh - (44px + 28px + 100px + 54px + 60px));
   overflow-y: auto;
   padding: 15px 0 0 15px;
 }
@@ -266,7 +273,7 @@ p {
   border-color: #ced4da !important;
   outline: none;
   -webkit-box-shadow: none;
-          box-shadow: none;
+  box-shadow: none;
 }
 
 #right-side #writing-area {
@@ -300,15 +307,28 @@ p {
 
 #right-side #icons-area {
   width: 100%;
-  position: absolute;
-  left: 0;
-  top: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 0.5em 1em;
   border: 1px solid #ced4da;
   border-radius: 0 0 5px 5px;
 }
 
-#right-side #icons-area .textarea-icons {
+.telegram-plane-icon {
+  margin-left: 0.5em;
+}
+
+/*.paperclip-icon {
+  order: 2;
+} */
+
+/*#right-side #icons-area .textarea-icons {
   float: right;
+} */
+
+.textarea-icons label {
+  margin: 0;
 }
 
 #right-side #icons-area #file-selector {
@@ -317,8 +337,6 @@ p {
 
 #right-side #icons-area i {
   font-size: 20px;
-  margin-right: 15px;
-  margin-top: 10px;
   color: #007bff;
   cursor: pointer;
 }
