--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -28,7 +28,7 @@
         <form id="signup-form">
             <div class="form-group">
                 <input type="text" class="form-control" placeholder="Enter your name" id="name" autocomplete="off"
-                    required>
+                    autofocus required>
             </div>
             <button type="submit" class="btn btn-primary btn-lg" id="submit-button">Enter</button>
         </form>
