--- a/static/css/style.css
+++ b/static/css/style.css
@@ -111,23 +111,30 @@ p {
   color: red;
   margin: 0px 0px 10px 0;
   -webkit-animation-name: hide;
-  animation-name: hide;
+          animation-name: hide;
   -webkit-animation-duration: 0.5s;
-  animation-duration: 0.5s;
+          animation-duration: 0.5s;
   -webkit-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
   -webkit-animation-play-state: paused;
-  animation-play-state: paused;
+          animation-play-state: paused;
+}
+
+#main-area {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
 }
 
 #left-side {
   background-color: #3f0e40;
   min-height: calc(100vh - 44px);
   width: 260px;
-  float: left;
   color: #fffafa;
   position: relative;
   overflow-y: auto;
+  z-index: 999;
 }
 
 #left-side .fa-circle {
@@ -136,20 +143,13 @@ p {
   margin-right: 5px;
 }
 
-/* #left-side #user-info {
-  
+#left-side #user-info {
+  padding: 20px;
 }
 
 #left-side #user-info i {
   float: left;
   margin: 6px 10px 0 0;
-} */
-
-#user-info {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  padding: 20px;
 }
 
 #left-side #channels-header {
@@ -221,12 +221,15 @@ p {
 #right-side {
   width: calc(100% - 260px);
   height: calc(100vh - (44px));
-  float: right;
   padding: 20px;
 }
 
 #right-side #chat-header p {
   font-weight: bold;
+}
+
+#right-side #toggle-btn {
+  margin-right: 10px;
 }
 
 #right-side .chat-message {
@@ -235,7 +238,7 @@ p {
 
 #right-side #message-area {
   width: 100%;
-  height: calc(100vh - (44px + 28px + 100px + 54px + 60px));
+  height: calc( 100vh - ( 44px + 28px + 100px + 54px + 60px ));
   overflow-y: auto;
   padding: 15px 0 0 15px;
 }
@@ -273,7 +276,7 @@ p {
   border-color: #ced4da !important;
   outline: none;
   -webkit-box-shadow: none;
-  box-shadow: none;
+          box-shadow: none;
 }
 
 #right-side #writing-area {
@@ -307,28 +310,19 @@ p {
 
 #right-side #icons-area {
   width: 100%;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  padding: 0.5em 1em;
+  position: absolute;
+  left: 0;
+  top: 100%;
   border: 1px solid #ced4da;
   border-radius: 0 0 5px 5px;
 }
 
-.telegram-plane-icon {
-  margin-left: 0.5em;
+#right-side #icons-area .fa-paperclip {
+  cursor: pointer;
 }
 
-/*.paperclip-icon {
-  order: 2;
-} */
-
-/*#right-side #icons-area .textarea-icons {
+#right-side #icons-area .textarea-icons {
   float: right;
-} */
-
-.textarea-icons label {
-  margin: 0;
 }
 
 #right-side #icons-area #file-selector {
@@ -337,6 +331,8 @@ p {
 
 #right-side #icons-area i {
   font-size: 20px;
+  margin-right: 15px;
+  margin-top: 10px;
   color: #007bff;
   cursor: pointer;
 }
@@ -366,11 +362,6 @@ p {
   opacity: 0.5;
 }
 
-.fa-paperclip,
-.fa-telegram-plane {
-  cursor: pointer;
-}
-
 /* width */
 ::-webkit-scrollbar {
   height: 8px;
@@ -394,18 +385,35 @@ p {
   background: #2980b9;
 }
 
+.hide-sidebar {
+  display: none;
+}
+
+.show-sidebar {
+  display: block !important;
+  position: absolute !important;
+}
+
+#toggle-btn {
+  display: none;
+  border: 0;
+}
+
 @media (max-width: 599px) {
   #signup-wrapper .form-control {
     width: auto;
   }
   #left-side {
-    width: 150px;
+    display: none;
   }
   #left-side .fa-plus {
     margin-left: 25px !important;
   }
   #right-side {
-    width: calc(100% - 150px);
+    width: 100%;
+  }
+  #toggle-btn {
+    display: block;
   }
 }
 
