--- a/templates/home.html
+++ b/templates/home.html
@@ -105,14 +105,17 @@
           style="resize: none;"></textarea>
         <div id="icons-area">
           <span class="textarea-icons"><input type="file" name="" id="file-selector" accept="image/*" multiple></span>
-          <span class="textarea-icons paperclip-icon">
+          <a href="javascript:void(0)" class="textarea-icons paperclip-icon">
             <label for="file-selector">
               <i class="fas fa-paperclip"></i>
             </label>
-          </span>
-          <span class="textarea-icons telegram-plane-icon">
+          </a>
+          <!-- <span class="textarea-icons telegram-plane-icon">
             <i class="fab fa-telegram-plane" id="send-icon"></i>
-          </span>
+          </span> -->
+          <a href="javascript:void(0)" class="textarea-icons telegram-plane-icon" id="send-icon">
+            <i class="fab fa-telegram-plane"></i>
+          </a>
         </div>
       </div>
     </div>
