Fix z-index of modal form

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -415,6 +415,10 @@ p {
   border: 0;
 }
 
+.show {
+  z-index: 99 !important;
+}
+
 @media (max-width: 599px) {
   #signup-wrapper .form-control {
     width: auto;
